fix mis-aligned padding

--- a/css2/project.css
+++ b/css2/project.css
@@ -191,7 +191,7 @@ main section div a img:hover {
         }
         
         .bodyText {
-            padding: 2.25em 0 0 5em;
+            padding: 2.25em 0 0 1em;
         }
         
         /* END SECTION STYLING */
